# choice-learn

./: .gitignore  .pre-commit-config.yaml  404.html  Attention Based Embedding.ipynb  Attention_based_basket_embedding_Final.ipynb  Attention_based_embedding.py  Attention_based_revisited.ipynb  Attention_based_transaction_embedding.ipynb  CITATION.bib  CITATION.cff  CITATION_AC.bib  CLAUDE.md  CONTRIBUTING.md  LICENSE.md  Makefile  New Attention Based Embedding.ipynb  README.md  README_review.md  attn_model.json  index.html  main.py  mkdocs.yaml  objects.inv  pyproject.toml  requirements-complete.txt  requirements-developer.txt  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/actions/: build-draft.yaml  build_draft.yaml
.github/actions/publish/: action.yaml
.github/workflows/: ci.yaml  deploy_docs.yaml  draft_paper.yml  pr_ci.yaml  release_pypi.yaml  release_test_pypi.yaml  test_pypi.yaml
Notebooks/: Attention_based_basket_embedding.ipynb  Attention_based_basket_embedding_Final.ipynb  Attention_based_revisited.ipynb  Attention_based_transaction_embedding.ipynb  Basic_user_item_embedding.ipynb  Synthetic_data_generation.ipynb  User_item_distributions.ipynb  comparison_old_new.ipynb  synthetic_data.ipynb
choice_learn/: __init__.py  tf_ops.py
choice_learn/basket_models/: AttnModel.py  __init__.py  alea_carta.py  alea_carta_data.py  att_rec.py  attn_model.py  base_basket.py  base_basket_model.py  base_model.py  basic_attention_model.py  data_gen.py  dataset.py  item2vec_prod2vec.py  main.py  preprocessing.py  sabac.py  self_attention_model.py  self_attention_model_scalar.py  shopper.py  synthetic_dataset.py  trip_dataset.py  trip_preprocessing.py
choice_learn/basket_models/basket_dataset/: __init__.py  dataset.py
choice_learn/basket_models/data/: __init__.py  basket_dataset.py  preprocessing.py  synthetic_dataset.py
choice_learn/basket_models/datasets/: __init__.py  badminton.py  bakery.py  synthetic_dataset.py
choice_learn/basket_models/utils/: __init__.py  permutation.py
choice_learn/data/: __init__.py  choice_dataset.py  indexer.py  storage.py  store.py
choice_learn/datasets/: __init__.py  bakery.py  base.py  examples.py  expedia.py  tafeng.py
choice_learn/datasets/data/: __init__.py  test_data.csv
choice_learn/models/: __init__.py  base_model.py  baseline_models.py  conditional_logit.py  conditional_mnl.py  halo_mnl.py  latent_class_base_model.py  latent_class_mnl.py  learning_mnl.py  mix_mnl.py  nested_logit.py  reslogit.py  reslogit_bis.py  rumnet.py  simple_mnl.py  tastenet.py
choice_learn/toolbox/: __init__.py  assortment_optimizer.py  gurobi_opt.py  or_tools_opt.py
choice_learn/utils/: metrics.py  model_saver.py  normalomax.py  tf_ops.py
code/: index.html
config/: config.py  config.toml
docs/: choice_dataset_usage.md  explanations.md  how-to-guides.md  index.md  references_base_model.md  references_clogit.md  references_data.md  references_rumnet.md  tutorials.md
docs/notebooks/models/: models_finetuning.md
docs/paper/: memory_usage.ipynb  non_linear_utility_example.ipynb  paper.bib  paper.md  table.md
docs/references/basket_models/: references_alea_carta.md  references_base_basket.md  references_basic_attention_model.md  references_dataset.md  references_preprocessing.md  references_self_attention_model.md  references_shopper.md  references_trip_dataset.md  references_trip_preprocessing.md
docs/references/data/: references_dataset.md  references_indexer.md  references_storage.md  references_store.md
docs/references/datasets/: references_base.md  references_examples.md  references_expedia.md  references_tafeng.md
docs/references/models/: references_base_model.md  references_baseline_models.md  references_clogit.md  references_halo_mnl.md  references_latent_class_base_model.md  references_reslogit.md  (+6 more)
explanations/: index.html
how-to-guides/: index.html
lib/data/: choice_dataset.py  choice_dataset_v3.py  indexer.py  store.py
lib/models/: rumnet.py
notebooks/: assortment_example.ipynb  bakery_dataset.ipynb  choice_learn_introduction_clogit.ipynb  choice_learn_introduction_data.ipynb  custom_model.ipynb  dataset_creation.ipynb  features_byID_example.ipynb  features_storage_example.ipynb  introductive_example.ipynb  latent_class_model.ipynb  logistic_regression.ipynb  london_and_bakery_dataset.ipynb  london_dataset.ipynb  mixture_mnl.ipynb  parameters_and_model_customization.ipynb  rumnet_example.ipynb  simple_and_mix_logit.ipynb  simple_mnl_example.ipynb  simple_mnl_mlogit.ipynb  tastenet_example.ipynb  template.ipynb  test_new_dataset.ipynb
notebooks/auxiliary_tools/: assortment_example.ipynb
notebooks/basket_models/: alea_carta.ipynb  alea_carta_old.ipynb  attn.model.ipynb  attn_model.ipynb  attn_model.json  basic_attention.ipynb  basket_data.ipynb  self_attention.ipynb  shopper.ipynb  shopper_tutorial.ipynb  synthetic_dataset.py
notebooks/data/: dataset_creation.ipynb  features_byID_examples.ipynb  introduction_to_data_handling.md
notebooks/introduction/: 1_introductive_example.ipynb  2_data_handling.ipynb  3_model_clogit.ipynb  4_model_customization.ipynb
notebooks/models/: conditional_logit.md  custom_modelling.md  halo_mnl.ipynb  latent_class_model.ipynb  learning_mnl.ipynb  logistic_regression.ipynb  nested_logit.ipynb  reslogit.ipynb  reslogit_TEST.ipynb  reslogit_swissmetro.ipynb  reslogit_tf.ipynb  reslogit_toy_dataset.ipynb  rumnet.ipynb  saving_loading_models.ipynb  simple_mnl.ipynb  simple_mnl_swissmetro_comparison_for_reslogit.ipynb  tastenet.ipynb
paper/: memory_usage.ipynb  non_linear_utility_example.ipynb
paper/paper/: index.html
python/: .data.py.swp  .model.py.swp  AttnModel.py  DataGen.py  comparison_old_new.ipynb  data.py  main.py  model.py
python/att-basket/: pyvenv.cfg
python/tf/: pyvenv.cfg
search/: search_index.json
tests/: manual_run.py
tests/data/: test_data.csv
tests/unit_tests/: test_os_datasets.py  test_placeholder.py  test_tf_ops.py  tf_ops.py
tutorials/: index.html
(+112 files in other folders)
