[tool.ruff]
select = [
  "E",
  "W",
  "F",
  "I",
  "N",
  "D",
  "ANN",
  "Q",
  "RET",
  "ARG",
  "PTH",
  "PD",
] # See: https://beta.ruff.rs/docs/rules/
ignore = ["D203", "D213", "ANN101", "ANN102", "ANN204", "ANN001", "ANN202", "ANN201", "ANN206", "ANN003", "PTH100", "PTH118", "PTH123"]
line-length = 100
target-version = "py310"
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.isort]
known-first-party = ["choice_learn", "config", "tests"]

[tool.ruff.lint]

[tool.bandit.assert_used]
exclude_dirs = ["tests/"]

[tool.poetry]
name = "choice-learn"
version = "0.1.0"
description = "Choice-Learn is a Python package to help you specify, estimate and use discrete choice models with ease."
authors = [
  "artefactory <vincent.auriau@artefact.com>",
  "VincentAuriau <vincent.auriau@artefact.com>"
  ]
homepage = "https://github.com/artefactory/choice-learn-private"
documentation = "https://artefactory.github.io/choice-learn-private"
license = "MIT"
readme = "README.md"
keywords = ["discrete", "choice", "model", "machine", "learning", "assortment", "pricing", "retail", "supermarket"]
packages = [{include = "choice_learn"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.3"
pandas = "^1.5.3"
tensorflow = "^2.11.0"
tensorflow-probability = "^0.20.1"
tqdm = "^4.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
pre-commit = "^3.3"
ipykernel = "^6.9"
nbstripout = "^0.7"
ruff = "^0.1.2"
pytest-cov = "^4.1"
codespell = "^2.2"
python-markdown-math = "^0.8"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5"
mkdocs-material = {extras = ["pygments"], version = "^9.5.3"}
mkdocs-nbconvert = "^0.2.1"
mkdocstrings-python = "^1.7.5"
python-markdown-math = "^0.8"
bandit = "^1.7.5"
nbstripout = "^0.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variables = ["choice_learn/__init__.py:__version__"]
version_toml = ["pyproject.toml:tool.poetry.version"]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"
commit_message = "chore(release): {version}\n\n[skip ci]\nAutomatically generated by semantic-release"
tag_format = "{version}"

[tool.semantic_release.changelog]
exclude_commit_patterns = ['''^chore\(release\).*''']

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "ADD",
    "BUILD",
    "CHORE",
    "CI",
    "DOC",
    "ENH",
    "FEAT",
    "FIX",
    "PERF",
    "STYLE",
    "REFAC",
    "TEST",
]
minor_tags = ["FEAT"]
patch_tags = ["ADD", "BUILD", "ENH", "FIX", "PERF"]
