[project]
requires-python = ">=3.9"

[tool.ruff]
select = [
  "E",
  "W",
  "F",
  "I",
  "N",
  "D",
  "ANN",
  "Q",
  "RET",
  "ARG",
  "PTH",
  "PD",
] # See: https://beta.ruff.rs/docs/rules/
ignore = ["D203", "D213", "ANN101", "ANN102", "ANN204", "ANN001", "ANN202", "ANN201", "ANN206", "ANN003", "PTH100", "PTH118", "PTH123"]
line-length = 100
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
]

[tool.ruff.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.isort]
known-first-party = ["choice_learn", "config", "tests"]

[tool.ruff.lint]

[tool.bandit.assert_used]
exclude_dirs = ["tests/"]

[tool.pytest.ini_options]
pythonpath = ["./"]

[tool.poetry]
name = "choice-learn"
version = "0.0.5"
description = "Large-scale choice modeling through the lens of machine learning."
authors = [
  "artefactory <vincent.auriau@artefact.com>",
  "VincentAuriau <vincent.auriau.dev@gmail.com>"
  ]
homepage = "https://github.com/artefactory/choice-learn"
documentation = "https://artefactory.github.io/choice-learn"
license = "MIT"
readme = "README.md"
keywords = ["discrete", "choice", "model", "machine", "learning", "assortment", "pricing", "retail", "supermarket"]
packages = [{include = "choice_learn"}]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Software Development"
]

[tool.poetry.dependencies]
python = "^3.9.0"
numpy = "^1.24.3"
pandas = "^1.5.3"
tensorflow = "^2.14.0"
tensorflow-probability = "^0.22.1"
tqdm = "^4.0.0"
ortools = { version = "^9.6", optional = true }
gurobipy = { version = "^11.0", optional = true }

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
pre-commit = "^3.3"
ipykernel = "^6.9"
nbstripout = "^0.7"
ruff = "^0.1.2"
pytest-cov = "^4.1"
codespell = "^2.2"
python-markdown-math = "^0.8"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5"
mkdocs-material = {extras = ["pygments"], version = "^9.5.3"}
mkdocs-nbconvert = "^0.2.1"
mkdocstrings-python = "^1.7.5"
python-markdown-math = "^0.8"
bandit = "^1.7.5"
nbstripout = "^0.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
